--- a/docs/latex/refman.tex
+++ b/docs/latex/refman.tex
@@ -234,6 +234,9 @@
   \hypersetup{pageanchor=true}
 %--- Begin generated contents ---
 \input{index}
+\input{md__f_1_2_desktop_2_i_t_2_diplomski_22_8_01semestar_2_razvoj_01ugradbenih_01sustava_2_r_u_s-_aut4653004c97e8aa4b530a7f296ee6ffe1}
+\input{md__f_1_2_desktop_2_i_t_2_diplomski_22_8_01semestar_2_razvoj_01ugradbenih_01sustava_2_r_u_s-_aut737dda752f6aa80aed6c939400b121f1}
+\input{md__f_1_2_desktop_2_i_t_2_diplomski_22_8_01semestar_2_razvoj_01ugradbenih_01sustava_2_r_u_s-_autf1324a472220271d9256e91fc9d18fab}
 \chapter{File Index}
 \input{files}
 \chapter{File Documentation}
