--- a/docs/latex/index.tex
+++ b/docs/latex/index.tex
@@ -2,6 +2,12 @@
 \hypertarget{index}{}\label{index}\index{Automatski pokazivač skretanja bicikla 🚲@{Automatski pokazivač skretanja bicikla 🚲}}
 \label{index_md__f_1_2_desktop_2_i_t_2_diplomski_22_8_01semestar_2_razvoj_01ugradbenih_01sustava_2_r_u_s-_automatski-pokazivac-skretanja-bicikla_2_r_e_a_d_m_e}%
 \Hypertarget{index_md__f_1_2_desktop_2_i_t_2_diplomski_22_8_01semestar_2_razvoj_01ugradbenih_01sustava_2_r_u_s-_automatski-pokazivac-skretanja-bicikla_2_r_e_a_d_m_e}%
+
+
+\href{https://zvonimirM328.github.io/RUS-Automatski-pokazivac-skretanja-bicikla/html}{\texttt{ }}
+
+\href{https://wokwi.com/projects/429320227133652993}{\texttt{ 🔗 Poveznica za projekt}}
+
 \hypertarget{index_autotoc_md12}{}\doxysection{\texorpdfstring{Opis projekta}{Opis projekta}}\label{index_autotoc_md12}
 Ovaj projekt je rezultat timskog rada u sklopu projektnog zadatka kolegija {\bfseries{Razvoj ugradbenih sustava}} na {\bfseries{Tehničkom veleučilištu u Zagrebu}}.
 
